2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-02-28 Eric Sandall <eric@sandall.us>
	* CONFLICTS: Removed conflicting spell

2004-07-05 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 4.23f12
	  Removed MAINTAINER
	  Shortened SHORT
	  Renamed to csound
	  BUILD_API=2
	  Use SOURCEFORGE_URL (more up-to-date)
	  SOURCE is .zip file and renamed
	* BUILD: Converted to BUILD_API 2
	* INSTALL: Added
	* CONFLICTS: Conflicts with Csound
	* PRE_BUILD: Clean up
	* DEPENDS: Removed dependency on tcl, tk depends on it
	  Cleaned up
	* Makefile: Updated to 4.23f12
	* WIP: Still needs work

2004-02-22 Unet <audio@sourcemage.org>
	* Makefile: tcl8.4 [bug #6061]

2004-01-22 Unet <audio@sourcemage.org>
	* DEPENDS: alsa-driver -> alsa-lib

2004-01-08 Eric Sandall <eric@sandall.us>
	* Makefile~: Removed
	* HISTORY: Formatted to Guru Handbook

2003-05-10 Unet <unet@sourcemage.org>
	* DETAILS: Csound is now LGPL! Yippeeeeeeeeee :)

2003-04-04 M.L. <mlubrano@sourcemage.org>
	* PRE_BUILD: Added missing MD5

2002-10-16 Unet <unet@sourcemage.org>
	* DETAILS: New spell version! Thus fixing bug #1297.
	  Version bumps to latest 4.21
	* Now uses the sorcery optimizations in the makefile.

2002-06-12 Unet <unet@sourcemage.org>
	* Created this.
