@@ -1,3 +1,0 @@
-export  OPTS=`echo $OPTIMIZATIONS | sed 's/ / -z /g'`  &&
-export  FLAGS=$CFLAGS                                  &&
-make  all
