@@ -1,2 +1,3 @@
 depends  alsa-lib  &&
-depends  fltk 
+depends  tk &&
+depends  fltk
