@@ -1,12 +1,13 @@
            SPELL=csound
-         VERSION=4.24.1
-          SOURCE=Csound-$VERSION.tar.bz2
-SOURCE_DIRECTORY=$BUILD_DIRECTORY/Csound-$VERSION
-   SOURCE_URL[0]=http://csounds.com/istvan/archive/misc/$SOURCE
-     SOURCE_HASH=sha512:3fe33bcc30dacd0cc7979e85f6e10c817b3b3f81abe35ac145e4e49ca959ab43dffa7dd0f4e80558234708f9e29e811b0da250b062f7cedb2fccd73e0d398f5a
+         VERSION=4.23f13
+          SOURCE=${SPELL}-${VERSION}gbs.0.tar.gz
+SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-${VERSION}gbs.0
+   SOURCE_URL[0]=${SOURCEFORGE_URL}/${SPELL}/${SOURCE}
+#   SOURCE_URL[1]=ftp://earth.cs.bath.ac.uk/pub/dream/newest/$SOURCE
+      SOURCE_HASH=sha512:09545ee95a6746dabf5c4f978d654902b5f057148c936b970910757396a127972a43b9215c78626e500bc80c81d1d76a835b1c504b70f9f13906b4be700b8791
         WEB_SITE=http://www.csounds.com
          ENTERED=20020513
-         UPDATED=20050922
+         UPDATED=20021016
       LICENSE[0]=LGPL
        BUILD_API=2
            SHORT="Top of sound synthesis language."
