@@ -1,2 +1,0 @@
-make  install             &&
-rm  -rf  /usr/src/Csound
