@@ -1,3 +1,0 @@
-Need more clean up and fixes Won't compile atm
-
-Still working on this, need to make all files in SOURCE be lower-case
