@@ -1,3 +1,7 @@
+2005-12-17 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to 4.23f13 gnu build system version
+	* BUILD, INSTALL, WIP: Deleted
+
 2005-11-29 Seth Woolley <seth@tautology.org>
 	* DETAILS: MD5 -> SHA512
 
